We had an issue with the z-index, I ws able to fix the z-indx, and it is now working well

--- a/researcherdna-v2/src/styles.css
+++ b/researcherdna-v2/src/styles.css
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 body{
-    background-color: rgb(233, 237, 242);
+    background-color: rgb(248,249,250);
 }
 
 body {
@@ -16,7 +16,7 @@ body {
   height: 55px;
   width: 100%;
   position: fixed;
-  z-index: 6;
+  z-index: 100;
   top: 0;
   left: 0;
   background-color: rgba(156, 185, 220, 0.295);
@@ -51,7 +51,7 @@ body {
   height: 100%;
   width: 150px;
   background-color: rgba(221, 232, 245, 0);
-  
+
 }
 .header-header h1{
   padding-left: 20px;
@@ -66,10 +66,10 @@ body {
   height: 100%;
   width: 70px;
   position: fixed;
-  z-index: 4;
+  z-index: 99;
   top: 0;
   left: 0;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(240, 240, 240);
   overflow-x: hidden;
   padding-top: 80px;
 }
@@ -135,8 +135,7 @@ body {
   margin-right: auto;
   margin-bottom: auto;
   border-radius: 0px;
-  border-bottom: 1px solid rgba(237, 237, 237, 0);
-  
+  z-index: 98;
   background-color: rgb(233, 237, 242);
 }
 .card-body{
@@ -145,13 +144,13 @@ body {
 
 .main-card-body-c{
   display: inline-flex;
-  background-color: rgb(163, 192, 227);
+  background-color: rgb(5, 69, 148);
   top:10px;
   position: relative;
   height: auto;
   width: 100%;
   padding:0;
-  
+
   border-bottom: 1px solid rgb(214, 214, 214);
 }
 
@@ -194,10 +193,10 @@ body {
   margin-left: 70px;
   margin-top: 55px;
   position: fixed;
-  
+  z-index: 98;;
   top: 0;
   left: 0;
-  background-color: rgb(233, 237, 242);
+  background-color: rgb(1, 11, 24);
   padding-top: 10px;
 }
 
